# 2025/06/13 perplexity Essential PEP 8 Std python code 
# https://www.perplexity.ai/search/set-up-pritter-codebase-Hzss.LUvSWeu2vTc2AG5Xg 
[project]
name = "ai_agent"
version = "0.1.0"
description = "https://www.boot.dev/courses/build-ai-agent-python"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[tool.hatch.envs.default]
dependencies = [
  "ruff",
  "pytest",
  # Add any other dev dependencies here
]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "pytest"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (import sorting)
  "N",   # pep8-naming
  "B",   # flake8-bugbear
]
ignore = ["E501"]  # Let formatter handle line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
